# ToDo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  docker-compose.yml  docker-entrypoint-celery-beat.sh  docker-entrypoint-celery.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django.yml
projects/: admin.py  models.py  urls.py  viewsets.py
projects/api/v1/: filters.py  serializers.py
tasks/: admin.py  apps.py  enums.py  exceptions.py  models.py  urls.py  viewsets.py
tasks/api/: __init__.py
tasks/api/v1/: celery.py  exceptions.py  filters.py  mail.py  serializers.py  utils.py  validators.py  workers.py
tasks/templates/css/: base.css
tasks/templates/html/: invitation.html  notification_of_deadlines.html
todo/: __init__.py  exceptions.py  jwt_auth.py  mixins.py  models.py  settings.py  settings.py.orig  urls.py  viewsets.py
todo/api/v1/: kafka_producer.py  kafka_sender.py
todo/todo/: settings.py
